# Localization-With-ORBSLAM2-Map

./: .gitignore  CMakeLists.txt  CameraTrajectory.txt  README.md  build.sh
Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Examples/RGB-D/: rgbd_tum.cc
Examples/ROS/ORB_SLAM2/: CMakeLists.txt
Examples/ROS/Stereo/: stereo_euroc.cc  stereo_kitti.cc
Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
extension/: CameraTrajectory.txt  KITTI04-12.yaml  Localization.cc  MapSaver.cc  evaluation  evaluation.cc  localization  mapsaver  predict_pose.txt
extension/config/: GlobalVariable.cc  KITTI00-02.yaml  KITTI04-12-localization.yaml  KITTI04-12.yaml
extension/include/: FrameDecorator.hpp  KeyPointDecorator.hpp  MotionModel.hpp  ObservationModel.hpp  OctFeatMap.hpp  ParticleFilter.h  ParticleFilter.hpp  Utils.hpp
extension/src/: FrameDecorator.cc  KITTI04-12-save_map.yaml  KeyPointDecorator.cc  MotionModel.cc  ObservationModel.cc  OctFeatMap.cc  ParticleFilter.cc  Utils.cc
include/: Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  ORBVocabulary.h  Optimizer.h  Serialize.h  System.h  Tracking.h
src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Serialize.cc  Sim3Solver.cc  System.cc  Tracking.cc
